projects/sbioa/mongodb/sit/sbioa-sit-mongodb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb
  labels:
    app: mongodb
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - sbioa-mongo-sit.coherent.in
      secretName: mongodb-tls
  rules:
    - host: "sbioa-mongo-sit.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongodb
                port:
                  number: 27023
